--- a/Style/app/src/main/res/values/styles.xml
+++ b/Style/app/src/main/res/values/styles.xml
@@ -9,9 +9,9 @@
     </style>
 
     <style name="RemoteButton">
-        <item name="android:background">@drawable/button_shape_normal</item>
+        <item name="android:background">@drawable/button_shape_shadow</item>
         <item name="android:layout_margin">4dp</item>
-        <item name="android:textColor">#556677</item>
+        <item name="android:textColor">@drawable/button_text_color</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_height">match_parent</item>
